# daisyway

./: .gitignore  Cargo.toml  README.md
.github/workflows/: qa.yaml
daisyway/: Cargo.toml
daisyway/src/: lib.rs  main.rs
daisyway/src/internal/: etsi014.rs  mod.rs  util.rs
daisyway/src/internal/daisyway/: mod.rs  setup.rs
daisyway/src/internal/daisyway/crypto/: basics.rs  client.rs  hash_domain.rs  mod.rs  server.rs
daisyway/src/internal/daisyway/net/: mod.rs  tcp_client.rs  tcp_participant.rs
daisyway/src/internal/daisyway/net/tcp_server/: abort_on_drop_handle.rs  connection_manager.rs  events.rs  fanout_connection_handler.rs  fanout_osk_handler.rs  mod.rs
daisyway/src/internal/osk/: deadman.rs  mod.rs  outfile.rs  wireguard.rs
example/: test_wg.sh
example/ada/: config.toml
example/bob/: config.toml
nix/: 02_main.nix
simulator/: Cargo.toml
simulator/src/: main.rs
tests/integration/wireguard_connection/: test.nix  test.py
