[package]
name = "daisyway"
version = "0.1.0"
edition = "2021"
homepage = "https://rosenpass.eu"
description = "Daisiway"

[dependencies]
reqwest = { version = "0.12.12", default-features = false, features = [
    "json",
    "rustls-tls",
] }
anyhow = "1.0.95"
base64ct = { version = "1.6.0" }
clap = { version = "4.5.31", features = ["derive"] }
clap_complete = "4.5.46"
clap_mangen = "0.2.26"
env_logger = "0.11.6"
log = "0.4.25"
rand = "0.9.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
sha3 = "0.10.8"
tokio = { version = "1", features = ["full"] }
toml = "0.8.20"
uuid = { version = "1.13.1", features = ["serde"] }
zerocopy = { version = "0.8.17", features = ["derive"] }
rustls = { version = "0.23.23", features = ["ring"] }
rustls-pki-types = "1.11.0"
wireguard-uapi = "3.0.0"
shadow-rs = { version = "1.0.1", default-features = false }

[build-dependencies]
shadow-rs = { version = "1.0.1" }
