[package]
name = "simulator"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
base64ct = "1.7.3"
clap = { version = "4.5.32", features = ["derive"] }
env_logger = "0.11.7"
http-body-util = "0.1.3"
hyper = { version = "1.6.0", features = ["full", "http1", "server"] }
hyper-rustls = "0.27.5"
hyper-util = "0.1.10"
log = "0.4.26"
rustls = "0.23.25"
rustls-pki-types = "1.11.0"
serde_json = "1.0.140"
tokio = { version = "1.44.1", features = ["full"] }
# tokio-native-tls = "0.3.1"
tokio-rustls = "0.26.2"
tokio-stream = "0.1.17"
uuid = { version = "1.16.0", features = ["v4"] }
# tokio-native-tls = "0.3.1"
# rustls-pemfile = "2.2.0"
